--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= webpackConfig.name %></title>
+
+    <script src="https://accounts.google.com/gsi/client" async defer ></script>
+   
   </head>
   <body>
+    
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
